navbar overflow bugfix and code optimization

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,12 +1,13 @@
 
 .navbar-container {
     background-color: var(--primary-color);
-    height: 5rem;
-    width: 100vw;
+    height: 6rem;
+    max-width: 100vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow:rgba(0, 0, 0, 0.24) 0px 3px 8px;;
+    box-shadow:rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    overflow-x: hidden; 
 }
 
 .logo {
@@ -28,9 +29,14 @@
 .navbar-link{
     text-decoration: none;
     color: white;
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: 600;
     transition: all 0.2s;
+}
+.active {
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 1.2rem;
 }
 .navbar-link:hover{
     transform: scale(1.2);
@@ -43,8 +49,8 @@
 }
 .navbar-icon {
     color: white;
-    height: 1.25rem;
-    width: 1.25rem;
+    height: 1.55rem;
+    width: 1.55rem;
     transition: all 0.2s;
 }
 .navbar-icon:hover {
@@ -97,31 +103,31 @@
         top: 70%;
     }
 
-    input:checked ~ .toggle .top_line{
+    .toggle-active .top_line{
         top: 14px;
         width: 25px;
         transform: rotate(45deg);
     }
-    input:checked ~ .toggle .bottom_line{
+    .toggle-active .bottom_line{
         top: 14px;
         width: 25px;
         transform: rotate(-45deg);
     }
-    input:checked ~ .toggle .middle_line{
+    .toggle-active .middle_line{
       opacity: 0;
       transform: translateX(-25px);
     }
 
 
-
-
     .navbar-dropdown-menu {
         /* animation stuff */
-        position: absolute;
-        top: 5rem;
-        right: -100vw;
+        position:fixed;
+        top: 6rem;
+        transform: translateX(100vw);
         height: calc(100vh - 5rem);
+        max-width: 100vw;
         width: 100vw;
+        
         z-index: 1;
         background-color: rgba(241, 241, 241, 0.95);
         transition: 0.4s ease-in-out;
@@ -150,8 +156,13 @@
         color: var(--primary-color);
        
     }
-    input:checked ~ .navbar-dropdown-menu {
+    .dropdown-active {
         right: 0;
+        display:flex;
+        transform: translateX(0vw);
+    }
+    .active {
+        font-size: 2.4rem;
     }
 
   }
